Bugfix lista domain error solved